--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/head.ejs %>
 
     <h1> Welcome to Homework 4 HOME page!</h1>
-    <p>Please click on any page to learn about our employees! </p>
+    <p>Hello, My name is <%= name %>, ceo of this company! Please click on any page to learn about our employees! </p>
     
     
     
