--- a/views/partials/employee.ejs
+++ b/views/partials/employee.ejs
@@ -1,5 +1,5 @@
 
-Name:   <h2 id="h2"> </h2>
-Account:<h2 id="h3"> </h2>
-ID:     <h2 id="h4"> </h2>
-Email:  <h2 id="h5"> </h2>
+Name:   <h2 id="h2" value="<%=name%>"> <%=name%> </h2>
+Account:<h2 id="h3" value="<%=url%>"> <%=url%> </h2>
+ID:     <h2 id="h4" value="<%=card%>"><%=card%> </h2>
+Email:  <h2 id="h5" value="<%=email%>"> <%=email%></h2>
