--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,7 @@
        
     
       <link href="css/styles.css" rel="stylesheet" type="text/css" />
-      <script SRC='js/functions.js'></script>   
+      <!--<script SRC='js/functions.js'></script>   -->
       <script src = "faker.js" type = "text/javascript"></script>
 
     </head>
